--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run KIWI_ANGULAR:serve-ssr",
+    "serve:ssr": "node dist/KIWI_ANGULAR/server/main.js",
+    "build:ssr": "ng build --prod && ng run KIWI_ANGULAR:server:production",
+    "prerender": "ng run KIWI_ANGULAR:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,16 +22,21 @@
     "@angular/forms": "~11.0.6",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
+    "@angular/platform-server": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@nguniversal/express-engine": "11.0.1",
+    "express": "^4.15.2",
+    "primeng": "^9.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "primeng": "^9.1.3"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.6",
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
+    "@nguniversal/builders": "^11.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
