--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/platform-server": "~11.0.6",
     "@angular/router": "~11.0.6",
-    "@nguniversal/express-engine": "11.0.1",
+    "@nguniversal/express-engine": "^12.1.0",
     "express": "^4.15.2",
-    "primeng": "^9.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,7 +34,7 @@
     "@angular-devkit/build-angular": "~0.1100.6",
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
-    "@nguniversal/builders": "^11.0.1",
+    "@nguniversal/builders": "12.1.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
