--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run nckuhub-frontend:serve-ssr",
     "serve:ssr": "node dist/nckuhub-frontend/server/main.js",
-    "build:ssr": "ng build --prod && ng run nckuhub-frontend:server:production",
+    "build:ssr": "ng build --configuration production && ng run nckuhub-frontend:server:production",
     "prerender": "ng run nckuhub-frontend:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.6",
-    "@angular/common": "~11.0.6",
-    "@angular/compiler": "~11.0.6",
-    "@angular/core": "~11.0.6",
-    "@angular/forms": "~11.0.6",
-    "@angular/platform-browser": "~11.0.6",
-    "@angular/platform-browser-dynamic": "~11.0.6",
-    "@angular/platform-server": "~11.0.6",
-    "@angular/router": "~11.0.6",
+    "@angular/animations": "~12.2.7",
+    "@angular/common": "~12.2.7",
+    "@angular/compiler": "~12.2.7",
+    "@angular/core": "~12.2.7",
+    "@angular/forms": "~12.2.7",
+    "@angular/platform-browser": "~12.2.7",
+    "@angular/platform-browser-dynamic": "~12.2.7",
+    "@angular/platform-server": "~12.2.7",
+    "@angular/router": "~12.2.7",
     "@nguniversal/express-engine": "^12.1.0",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.6",
+    "@angular-devkit/build-angular": "~12.2.7",
+    "@angular/cli": "~12.2.7",
+    "@angular/compiler-cli": "~12.2.7",
     "@nguniversal/builders": "12.1.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
@@ -41,7 +41,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -49,6 +49,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.3.5"
   }
 }
