--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run nckuhub-frontend:serve-ssr",
+    "serve:ssr": "node dist/nckuhub-frontend/server/main.js",
+    "build:ssr": "ng build && ng run nckuhub-frontend:server",
+    "prerender": "ng run nckuhub-frontend:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +22,11 @@
     "@angular/forms": "~12.2.7",
     "@angular/platform-browser": "~12.2.7",
     "@angular/platform-browser-dynamic": "~12.2.7",
+    "@angular/platform-server": "~12.2.7",
     "@angular/router": "~12.2.7",
+    "@nguniversal/express-engine": "^12.1.0",
     "express": "^4.15.2",
+    "primeng": "^12.2.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -28,6 +35,8 @@
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
+    "@nguniversal/builders": "^12.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
