--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,macos,windows,vim
+
+# yarn
+yarn-error.log
