--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.15.2",
     "primeng": "^12.2.0-rc.1",
     "rxjs": "~6.6.0",
+    "tailwindcss": "^2.2.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -60,7 +61,7 @@
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
   },
-  "engines" : { 
-    "node" : ">=14.0.0"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
