--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "~12.2.7",
     "@angular/router": "~12.2.7",
     "@nguniversal/express-engine": "^12.1.0",
+    "@schematics/angular": "^12.2.12",
     "express": "^4.15.2",
     "primeng": "^12.2.0-rc.1",
     "rxjs": "~6.6.0",
@@ -62,6 +63,8 @@
     "typescript": "~4.3.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0 <2",
+    "npm": "!! Please use yarn instead of NPM to install dependencies !!"
   }
 }
