--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
   },
+  "config": {
+    "engine-strict": true
+  },
   "engines": {
     "node": ">=14.0.0",
     "yarn": ">=1.22.0 <2",
