feat: proxy secure setting to true (for login session ?)

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,8 +1,9 @@
 {
-    "/": {
+    "/api": {
         "target": "https://nckuhub.com",
-        "secure": false,
+        "secure": true,
         "logLevel": "debug",
-        "changeOrigin": true
+        "changeOrigin": true,
+        "pathRewrite": {"^/api" : ""}
     }
 }
