--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "rxjs": "~6.6.0",
         "tailwindcss": "^2.2.16",
         "tslib": "^2.0.0",
+        "yarn": "^1.22.17",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
