--- a/package.json
+++ b/package.json
@@ -30,12 +30,10 @@
         "@schematics/angular": "^12.2.12",
         "express": "^4.15.2",
         "pretty-quick": "^3.1.2",
-        "primeicons": "^5.0.0",
-        "primeng": "^12.2.3",
+        "primeng": "^12.2.0-rc.1",
         "rxjs": "~6.6.0",
         "tailwindcss": "^2.2.16",
-        "tslib": "^2.3.1",
-        "yarn": "^1.22.17",
+        "tslib": "^2.0.0",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
